fix: fix SideBarAccountTarget component text overflow

--- a/src/components/SideBar/SideBarAccount/SideBarAccountTarget/SideBarAccountTarget.module.css
+++ b/src/components/SideBar/SideBarAccount/SideBarAccountTarget/SideBarAccountTarget.module.css
@@ -14,7 +14,3 @@
         background: lighten(var(--animeth-sidebar-color), 0.1)
     }
 }
-
-.username {
-    color: var(--animeth-text-contrast-color);
-}
